# llvm-project-mlir-dev

./: rebuild.sh  run.sh  test.mlir  test_ext-vector.c
mlir/include/mlir/: InitAllDialects.h  InitAllPasses.h
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Dialect/Letao/: CMakeLists.txt  LetaoOps.h  LetaoOps.td  Passes.h  Passes.td
mlir/include/mlir/Dialect/MIOpen/: LowerMIOpenOps.h  MIOpenOps.td
mlir/include/mlir/ExecutionEngine/: CRunnerUtils.h
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/Letao/: CMakeLists.txt  LetaoOps.cpp
mlir/lib/Dialect/Letao/Transforms/: MultAddTransToAdds.cpp  PassDetail.h  PrintOpLowering.cpp
mlir/lib/Dialect/MIOpen/: MIOpenOps.cpp
mlir/lib/ExecutionEngine/: BF16Conver.cpp  CMakeLists.txt
mlir/test/: CMakeLists.txt
mlir/test/Dialect/Letao/: Ops.mlir  driver_output_format_float.mlir  driver_output_format_float_run.mlir  driver_output_format_int.mlir  driver_output_format_int_run.mlir  lowering_to_std.mlir
mlir/tools/: CMakeLists.txt
mlir/tools/mlir-letao-driver/: CMakeLists.txt  mlir-letao-driver.cpp
mlir/tools/mlir-miopen-driver/: mlir-miopen-driver.cpp
mlir/tools/mlir-rocm-runner/: rocm-runtime-wrappers.cpp
mytest/: bitcast.mlir  bitcast2.mlir  float_step4.txt  rocm.mlir  step2.txt  step3.txt  step4.txt  test.mlir  test.mlir2
